--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <ul class="py-2 font-medium" role="none">
                 <li>
                   <a
-                    href="/index_en.html"
+                    href="home_en.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
                     role="menuitem"
                   >
@@ -110,7 +110,7 @@
                 </li>
                 <li>
                   <a
-                    href="/index.html"
+                    href="index.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
                     role="menuitem"
                   >
@@ -119,7 +119,7 @@
                 </li>
                 <li>
                   <a
-                    href="/index_es.html"
+                    href="home_es.html"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
                     role="menuitem"
                   >
