--- a/home_en.html
+++ b/home_en.html
@@ -617,7 +617,7 @@
                           data-carousel-prev
                         >
                           <span
-                            class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                            class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                           >
                             <svg
                               class="w-4 h-4 text-gray-500"
@@ -643,7 +643,7 @@
                           data-carousel-next
                         >
                           <span
-                            class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                            class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                           >
                             <svg
                               class="w-4 h-4 text-gray-500"
@@ -681,7 +681,7 @@
                             id="RGBRed"
                             min="0"
                             max="255"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Amount of RED"
                           />
                           <label for="RGBGreen">Green (0-255):</label>
@@ -690,7 +690,7 @@
                             id="RGBGreen"
                             min="0"
                             max="255"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Amount of GREEN"
                           />
                           <label for="RGBBlue">Blue (0-255):</label>
@@ -699,7 +699,7 @@
                             id="RGBBlue"
                             min="0"
                             max="255"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Amount of BLUE"
                           />
                           <button id="RGBSubmit" class="mt-2">Try color</button>
@@ -815,7 +815,7 @@
                             >
                               <img
                                 src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/c6bcb518306445.562c747d07c9e.png"
-                                class="absolute block w-auto rounded-lg -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                                class="absolute block h-full w-auto rounded-lg -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                               />
                             </div>
                             <!-- Item 2 -->
@@ -1052,7 +1052,7 @@
                             data-carousel-prev
                           >
                             <span
-                              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                              class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                             >
                               <svg
                                 class="w-4 h-4 text-gray-500"
@@ -1078,7 +1078,7 @@
                             data-carousel-next
                           >
                             <span
-                              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                              class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                             >
                               <svg
                                 class="w-4 h-4 text-gray-500"
@@ -1115,7 +1115,7 @@
                               id="hexRed"
                               maxlength="2"
                               pattern="[0-9A-Fa-f]{2}"
-                              class="w-full mb-2"
+                              class="w-full mb-2 rounded-lg"
                               placeholder="Value of RED"
                             />
                             <label for="hexGreen">Green (00-FF):</label>
@@ -1124,7 +1124,7 @@
                               id="hexGreen"
                               maxlength="2"
                               pattern="[0-9A-Fa-f]{2}"
-                              class="w-full mb-2"
+                              class="w-full mb-2 rounded-lg"
                               placeholder="Value of GREEN"
                             />
                             <label for="hexBlue">Blue (00-FF):</label>
@@ -1133,7 +1133,7 @@
                               id="hexBlue"
                               maxlength="2"
                               pattern="[0-9A-Fa-f]{2}"
-                              class="w-full mb-2"
+                              class="w-full mb-2 rounded-lg"
                               placeholder="Value of BLUE"
                             />
                             <button id="HexaSubmit" class="mt-2">
@@ -1256,7 +1256,7 @@
                             id="hslHue"
                             min="0"
                             max="360"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Pure COLOR"
                           />
                           <label for="hslSaturation"
@@ -1267,8 +1267,8 @@
                             id="hslSaturation"
                             min="0"
                             max="100"
-                            class="w-full mb-2"
-                            placeholder="SATURACION"
+                            class="w-full mb-2 rounded-lg"
+                            placeholder="SATURATION"
                           />
                           <label for="hslLightness">Luminosity (0-100)%:</label>
                           <input
@@ -1276,7 +1276,7 @@
                             id="hslLightness"
                             min="0"
                             max="100"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="LUMINOSITY"
                           />
                           <button id="hslSubmit" class="mt-2">
