--- a/home_es.html
+++ b/home_es.html
@@ -621,7 +621,7 @@
                           data-carousel-prev
                         >
                           <span
-                            class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                            class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                           >
                             <svg
                               class="w-4 h-4 text-gray-500"
@@ -647,7 +647,7 @@
                           data-carousel-next
                         >
                           <span
-                            class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                            class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                           >
                             <svg
                               class="w-4 h-4 text-gray-500"
@@ -685,7 +685,7 @@
                             id="RGBRed"
                             min="0"
                             max="255"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Cantidad de ROJO"
                           />
                           <label for="RGBGreen">Verde (0-255):</label>
@@ -694,7 +694,7 @@
                             id="RGBGreen"
                             min="0"
                             max="255"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Cantidad de VERDE"
                           />
                           <label for="RGBBlue">Azul (0-255):</label>
@@ -703,7 +703,7 @@
                             id="RGBBlue"
                             min="0"
                             max="255"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Cantidad de AZUL"
                           />
                           <button id="RGBSubmit" class="mt-2">
@@ -821,7 +821,7 @@
                             >
                               <img
                                 src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/c6bcb518306445.562c747d07c9e.png"
-                                class="absolute block w-auto rounded-lg -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                                class="absolute block h-full w-auto rounded-lg -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                               />
                             </div>
                             <!-- Item 2 -->
@@ -1059,7 +1059,7 @@
                             data-carousel-prev
                           >
                             <span
-                              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                              class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                             >
                               <svg
                                 class="w-4 h-4 text-gray-500"
@@ -1085,7 +1085,7 @@
                             data-carousel-next
                           >
                             <span
-                              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                              class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                             >
                               <svg
                                 class="w-4 h-4 text-gray-500"
@@ -1122,7 +1122,7 @@
                               id="hexRed"
                               maxlength="2"
                               pattern="[0-9A-Fa-f]{2}"
-                              class="w-full mb-2"
+                              class="w-full mb-2 rounded-lg"
                               placeholder="Valor de ROJO"
                             />
                             <label for="hexGreen">Verde (00-FF):</label>
@@ -1131,7 +1131,7 @@
                               id="hexGreen"
                               maxlength="2"
                               pattern="[0-9A-Fa-f]{2}"
-                              class="w-full mb-2"
+                              class="w-full mb-2 rounded-lg"
                               placeholder="Valor de VERDE"
                             />
                             <label for="hexBlue">Azul (00-FF):</label>
@@ -1140,7 +1140,7 @@
                               id="hexBlue"
                               maxlength="2"
                               pattern="[0-9A-Fa-f]{2}"
-                              class="w-full mb-2"
+                              class="w-full mb-2 rounded-lg"
                               placeholder="Valor de AZUL"
                             />
                             <button id="HexaSubmit" class="mt-2">
@@ -1265,7 +1265,7 @@
                             id="hslHue"
                             min="0"
                             max="360"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Tono de COLOR"
                           />
                           <label for="hslSaturation"
@@ -1276,7 +1276,7 @@
                             id="hslSaturation"
                             min="0"
                             max="100"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="SATURACION"
                           />
                           <label for="hslLightness"
@@ -1287,7 +1287,7 @@
                             id="hslLightness"
                             min="0"
                             max="100"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="LUMINOSIDAD"
                           />
                           <button id="hslSubmit" class="mt-2">
