--- a/index.html
+++ b/index.html
@@ -617,11 +617,11 @@
                         <!-- Slider controls -->
                         <button
                           type="button"
-                          class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+                          class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-2 cursor-pointer group focus:outline-none"
                           data-carousel-prev
                         >
                           <span
-                            class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                            class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                           >
                             <svg
                               class="w-4 h-4 text-gray-500"
@@ -643,11 +643,11 @@
                         </button>
                         <button
                           type="button"
-                          class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+                          class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-2 cursor-pointer group focus:outline-none"
                           data-carousel-next
                         >
                           <span
-                            class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                            class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                           >
                             <svg
                               class="w-4 h-4 text-gray-500"
@@ -685,7 +685,7 @@
                             id="RGBRed"
                             min="0"
                             max="255"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Quantitat de Vermell"
                           />
                           <label for="RGBGreen">Verd (0-255):</label>
@@ -694,7 +694,7 @@
                             id="RGBGreen"
                             min="0"
                             max="255"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Quantitat de VERD"
                           />
                           <label for="RGBBlue">Blau (0-255):</label>
@@ -703,7 +703,7 @@
                             id="RGBBlue"
                             min="0"
                             max="255"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="Quantitat de BLAU"
                           />
                           <button id="RGBSubmit" class="mt-2">
@@ -821,7 +821,7 @@
                             >
                               <img
                                 src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/c6bcb518306445.562c747d07c9e.png"
-                                class="absolute block w-auto rounded-lg -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
+                                class="absolute block h-full w-auto rounded-lg -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                               />
                             </div>
                             <!-- Item 2 -->
@@ -1060,7 +1060,7 @@
                             data-carousel-prev
                           >
                             <span
-                              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                              class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                             >
                               <svg
                                 class="w-4 h-4 text-gray-500"
@@ -1086,7 +1086,7 @@
                             data-carousel-next
                           >
                             <span
-                              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+                              class="inline-flex items-center justify-center w-5 h-5 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
                             >
                               <svg
                                 class="w-4 h-4 text-gray-500"
@@ -1123,7 +1123,7 @@
                               id="hexRed"
                               maxlength="2"
                               pattern="[0-9A-Fa-f]{2}"
-                              class="w-full mb-2"
+                              class="w-full mb-2 rounded-lg"
                               placeholder="Valor de Vermell"
                             />
                             <label for="hexGreen">Verd (00-FF):</label>
@@ -1132,7 +1132,7 @@
                               id="hexGreen"
                               maxlength="2"
                               pattern="[0-9A-Fa-f]{2}"
-                              class="w-full mb-2"
+                              class="w-full mb-2 rounded-lg"
                               placeholder="Valor de VERD"
                             />
                             <label for="hexBlue">Blau (00-FF):</label>
@@ -1141,7 +1141,7 @@
                               id="hexBlue"
                               maxlength="2"
                               pattern="[0-9A-Fa-f]{2}"
-                              class="w-full mb-2"
+                              class="w-full mb-2 rounded-lg"
                               placeholder="Valor de BLAU"
                             />
                             <button id="HexaSubmit" class="mt-2">
@@ -1266,8 +1266,8 @@
                             id="hslHue"
                             min="0"
                             max="360"
-                            class="w-full mb-2"
-                            placeholder="Tono de COLOR"
+                            class="w-full mb-2 rounded-lg"
+                            placeholder="To de COLOR"
                           />
                           <label for="hslSaturation">Saturació (0-100)%:</label>
                           <input
@@ -1275,7 +1275,7 @@
                             id="hslSaturation"
                             min="0"
                             max="100"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="SATURACIÓ"
                           />
                           <label for="hslLightness"
@@ -1286,7 +1286,7 @@
                             id="hslLightness"
                             min="0"
                             max="100"
-                            class="w-full mb-2"
+                            class="w-full mb-2 rounded-lg"
                             placeholder="LLUMINOSITAT"
                           />
                           <button id="hslSubmit" class="mt-2">
