--- a/home_es.html
+++ b/home_es.html
@@ -400,7 +400,7 @@
                     <section class="flex flex-col md:flex-row md:items-center">
                       <div
                         id="controls-carousel-RGB"
-                        class="relative w-full mb-4 md:w-1/3 md:mb-0"
+                        class="relative w-full mb-2 md:w-1/3 md:mb-0"
                         data-carousel="static"
                       >
                         <div
@@ -668,8 +668,9 @@
                           </span>
                         </button>
                       </div>
-                      <div class="md:w-1/3 mb-4 md:mb-0">
+                      <div class="md:w-1/3 mb-2 md:mb-0">
                         <!-- Elemento RGBcolorSample -->
+                        <p class="text-center">Muestra color:</p>
                         <div
                           id="RGBcolorSample"
                           class="w-full h-20 md:h-auto"
@@ -808,7 +809,7 @@
                       >
                         <div
                           id="controls-carousel-HEXA"
-                          class="relative w-full mb-4 md:w-1/3 md:mb-0"
+                          class="relative w-full mb-2 md:w-1/3 md:mb-0"
                           data-carousel="static"
                         >
                           <div
@@ -1106,8 +1107,9 @@
                             </span>
                           </button>
                         </div>
-                        <div class="md:w-1/3 mb-4 md:mb-0">
+                        <div class="md:w-1/3 mb-2 md:mb-0">
                           <!--HexacolorSample-->
+                          <p class="text-center">Muestra color:</p>
                           <div
                             id="HexacolorSample"
                             class="md:w-1/2 h-20 md:h-auto"
@@ -1250,10 +1252,11 @@
                         class="flex flex-col md:flex-row md:items-center"
                       >
                         <img
-                          class="rounded-lg mb-4"
+                          class="rounded-lg mb-2"
                           src="https://shreyasminocha.me/img/hsl-intuition/hue-wheel.png"
                           alt=""
                         />
+                        <p class="text-center">Mostra color:</p>
                         <div
                           id="HSLcolorSample"
                           class="md:w-1/2 h-20 md:h-auto"
