--- a/home_es.html
+++ b/home_es.html
@@ -365,7 +365,7 @@
                 >
                   <!-- Modal header -->
                   <div
-                    class="flex items-center justify-between p-5 border-b rounded-t dark:border-gray-600"
+                    class="flex items-center justify-between p-2 md:p-5 border-b rounded-t dark:border-gray-600"
                   >
                     <h3
                       class="text-xl font-medium text-gray-900 dark:text-white"
@@ -772,7 +772,7 @@
                   >
                     <!-- Modal header -->
                     <div
-                      class="flex items-center justify-between p-5 border-b rounded-t dark:border-gray-600"
+                      class="flex items-center justify-between p-2 md:p-5 border-b rounded-t dark:border-gray-600"
                     >
                       <h3
                         class="text-xl font-medium text-gray-900 dark:text-white"
@@ -1216,7 +1216,7 @@
                   >
                     <!-- Modal header -->
                     <div
-                      class="flex items-center justify-between p-5 border-b rounded-t dark:border-gray-600"
+                      class="flex items-center justify-between p-2 md:p-5 border-b rounded-t dark:border-gray-600"
                     >
                       <h3
                         class="text-xl font-medium text-gray-900 dark:text-white"
